# launcher

./: .editorconfig  .gitignore  .prettierrc.mjs  .rustfmt.toml  .yarnrc.yml  Cargo.toml  package.json  readme.md  tsconfig.json  tsconfig.node.json
.github/workflows/: backend.yml  frontend.yml
app/entrypoint/: index.html  main.tsx  package.json  postcss.config.mjs  vite.config.mts  vite.config.ts
app/providers/: mod.tsx  package.json  with-modals.tsx  with-query.tsx  with-router.tsx  with-theme.tsx
app/root/: mod.tsx  package.json
app/routes/: mod.tsx  package.json
crates/barscfg/: Cargo.toml
crates/barscfg/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/env/: mod.rs
crates/common/src/jre/: all.rs  manifest.rs  mod.rs
crates/common/src/libutils/: mod.rs
crates/common/src/manifest/: mod.rs
crates/common/src/tree/: mod.rs
crates/download/: Cargo.toml
crates/download/src/: lib.rs  main.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/ipc/src/distros/: mod.rs  mojang.rs
crates/ipc/src/error/: mod.rs
crates/ipc/src/launch/: mod.rs
crates/ipc/src/lookup/: mod.rs
crates/ipc/src/prepare/: mojang.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: from.rs  launcher.rs  lib.rs  main.rs
crates/launchers/: Cargo.toml
crates/launchers/src/: lib.rs  main.rs
crates/launchers/src/api/: mod.rs
crates/launchers/src/distros/: mod.rs
crates/launchers/src/distros/mojang/: api.rs  mod.rs
crates/launchers/src/error/: mod.rs
crates/launchers/src/install/: action.rs  executor.rs  mod.rs
crates/launchers/src/jre/: mod.rs
crates/launchers/src/launch/: base.rs  mod.rs  old.rs  utils.rs
crates/launchers/src/misc/: mod.rs
crates/launchers/src/specs/: jre.rs  manifest.rs  mod.rs
crates/lookup/: Cargo.toml
crates/lookup/src/: lib.rs  main.rs
crates/lookup/src/versions/: mod.rs  overview.rs
crates/profile/: Cargo.toml
crates/profile/src/: lib.rs
crates/providers/mojang/: Cargo.toml
crates/providers/mojang/src/: api.rs  install.rs  lib.rs  main.rs  provider.rs
crates/pvdr/: Cargo.toml
crates/pvdr/src/: lib.rs
crates/rsmc/: Cargo.toml
crates/rsmc/src/: lib.rs
crates/rsmc/src/api/: launchermeta.rs  mod.rs  piston.rs  resources.rs
crates/rsmc/src/error/: mod.rs
crates/rsmc/src/install/: mod.rs
crates/rsmc/src/launcher/: mod.rs
crates/rsmc/src/private/: tracing.rs
crates/rsmc/src/spec/: manifest.rs  mod.rs  runtime.rs
entities/instance/: mod.ts  package.json
entities/instance/model/: mod.ts
entities/instance/ui/: mod.ts
entities/instance/ui/list-item/: mod.tsx  styles.css.ts
entities/profile/: package.json
entities/profile/model/: mod.ts
entities/settings/: package.json
entities/settings/model/: mod.ts
entities/version/: mod.ts  package.json
entities/version/hooks/: mod.ts  use-lookup.ts
entities/version/lib/: local.ts  mojang.ts
entities/version/model/: mod.ts
features/create-or-edit-instance/: mod.ts  package.json
features/create-or-edit-instance/ui/: mod.ts
features/create-or-edit-instance/ui/form/: mod.tsx
features/launch/: mod.ts  package.json
features/launch/hooks/: mod.ts  use-launcher.ts
features/lookup/: mod.ts  package.json
features/lookup/hooks/: mod.ts  use-lookup-local-versions.ts
layouts/padded/: mod.tsx  package.json
layouts/sidebar/: mod.tsx  package.json
layouts/sided/: mod.tsx  package.json  style.css.ts
pages/home/: mod.tsx  package.json
pages/profiles/: mod.tsx  package.json
pages/settings/: mod.tsx  package.json
pages/versions/: mod.tsx  package.json
shared/config/general/: mod.ts  package.json
shared/config/storage/: package.json
shared/core/: launch.ts  lookup-versions.ts  mod.ts  package.json
shared/lib/indexed-db/: mod.ts  package.json
shared/lib/props-of/: mod.ts  package.json
shared/lib/styled-std/: css.ts  mod.ts  package.json  prop.ts  types.ts  utils.ts
shared/lib/styled-std/styled/: flex.ts
shared/theme/common/: mod.ts  package.json  theme.d.ts
shared/theme/css/: mod.ts  package.json
shared/theme/dark/: mod.ts  package.json
shared/theme/fonts/: mabry.css.ts  mabry.ts  mod.ts  mod.tsx  package.json
shared/theme/global/: mod.css.ts  mod.tsx  package.json
shared/theme/light/: mod.ts  package.json
shared/theme/provider/: mod.tsx  package.json
shared/theme/schema/: base.ts  mod.ts  package.json
shared/theme/vars/: mod.ts  package.json
shared/ui/extra/: mod.ts  package.json
shared/ui/extra/drag-region/: mod.tsx  styles.css.ts
shared/ui/extra/fs-picker/: mod.tsx  styles.css.ts  types.ts
shared/ui/extra/fs-picker/components/dir/: mod.tsx
shared/ui/extra/fs-picker/components/file/: mod.tsx
shared/ui/extra/window-controls/: mod.tsx  styles.css.ts
shared/ui/layout/: box.ts  column.ts  mod.ts  package.json  row.ts
shared/ui/layout/box/: mod.tsx
shared/ui/layout/column/: mod.tsx
shared/ui/layout/row/: mod.tsx
shared/ui/mantine/: mod.ts  package.json
shared/ui/mantine/button/: mod.ts  styles.css.ts
shared/ui/mantine/checkbox/: styles.css.ts
shared/ui/mantine/drawer/: mod.ts  styles.css.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: providers.rs
ui/core/: mod.ts  package.json
ui/core/button/: mod.ts  styles.css.ts
ui/mantine/: mod.ts
ui/mantine/button/: mod.ts  styles.css.ts
ui/mantine/checkbox/: mod.ts  styles.css.ts
widgets/settings/: mod.tsx  package.json
widgets/sidebar/: mod.tsx  package.json  styles.css.ts
widgets/versions/: mod.tsx  package.json  styles.css.ts
