[package]
name = "coppertiles-launcher"
version = "0.1.0"
description = "Technically advanced Minecraft Launcher by Copprtiles team"
authors = ["limpix31"]
license = "BSD-3-Clause"
repository = "https://github.com/coppertiles/launcher.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }
# Workspace
ipc = { path = "../crates/ipc" }
barscfg = { path = "../crates/barscfg" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
