[package]
name = "coppertiles-launcher"
version = "0.1.0"
description = "Technically advanced Minecraft Launcher by Copprtiles team"
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri.workspace = true
serde_json.workspace = true
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-dialog = "2.0.0-alpha"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }
# Workspace
ipc = { path = "../crates/ipc" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-alpha"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
