[package]
name = "download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.4.1", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
thiserror = "1.0.50"
tokio-util = "0.7.10"
integrity = { path = "../integrity" }
