[package]
name = "download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.34", features = ["full"] }
futures = "0"
anyhow = "1.0"
thiserror = "1.0"
tokio-util = "0.7"
integrity = { path = "../integrity" }
