[package]
name = "download"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.11", features = ["stream"] }
futures = "0"
anyhow = "1.0"
tokio-util = "0.7"
integrity = { path = "../integrity" }
