[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "2.0.0-alpha"
lookup = { path = "../lookup" }
serde = { version = "1.0", features = ["derive"] }
launchers = { path = "../launchers", features = ["all"] }
tokio = { version = "1.34", features = ["sync"] }
tokio-util = "0.7"
