[package]
name = "ipc"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
rsmc = { path = "../rsmc" }
lookup = { path = "../lookup" }
tokio-util = "0.7"
