[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
directories = "5.0.1"
thiserror = "1.0.50"
once_cell = "1.18.0"
