[package]
name = "launchers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
tokio = { version = "1.34.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
download = { path = "../download", optional = true }
url = { version = "2.4", features = ["serde"] }
regex = "1.10.2"
thiserror = "1.0.50"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }

[features]
mojang = []
