[package]
name = "launchers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.34", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
download = { path = "../download", optional = true }
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
thiserror = "1.0"
once_cell = "1.18"
reqwest = { version = "0.11", features = ["json"] }

[features]
serde_json = ["dep:serde_json"]
download = ["dep:download"]
mojang = []
all = ["serde_json", "mojang", "download"]
