[package]
name = "launchers"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json = { workspace = true, optional = true }
tokio.workspace = true
thiserror.workspace = true
tokio-util = "0.7"
download = { path = "../download", optional = true }
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
once_cell = "1.18"
reqwest = { version = "0.11", features = ["json"] }

[features]
mojang = []
all = ["dep:serde_json", "mojang", "dep:download"]
