[package]
name = "rsmc"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
download = { path = "../download", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
convert_case = { version = "0.6", optional = true }
url = { version = "2.5", features = ["serde"], optional = true }

[features]
default = ["tracing"]
spec = ["url"]
launcher = ["spec"]
tracing = []
api = ["reqwest", "url", "spec", "convert_case"]
install = ["api", "download"]
