[package]
name = "rsmc"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["launcher", "tracing"]
spec = []
launcher = ["spec"]
tracing = []
