[package]
name = "pvdr_mojang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.192", features = ["derive"] }
once_cell = "1.18.0"
url = { version = "2.4.1", features = ["serde"] }
common = { path = "../../common" }
download = { path = "../../download" }
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"
thiserror = "1.0.50"
futures = "0.3.29"
tokio-util = "0.7.10"
zip = "0.10.0-alpha.1"
